# abasto

./: README.md  main.py  pyproject.toml
notebooks/: 01_exploracion.ipynb
scripts/: 01_exploracion.py  02_calidad.py  03_baseline.py
slurm/: 01_exploracion.sh  02_calidad.sh  03_baseline.sh  pipeline.sh
src/abasto/: data_loader.py
