[project]
name = "abasto"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "fastexcel>=0.19.0",
    "openpyxl>=3.1.5",
    "polars[pyarrow]>=1.38.1",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "plotly>=6.6.0",
]
